// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sectionHeroOne Snapshot > renders with title and subtitle correctly 1`] = `
<section class="py-20">
  <h1 class="md:text-center">
    Welcome to HeroOne
  </h1>
  <p class="
    md:text-center
    sm:text-md
    text-base
    text-left
  ">
    This is a subtitle
  </p>
</section>
`;

exports[`sectionHeroOne Snapshot > renders with title only correctly 1`] = `
<section class="py-20">
  <h1 class="md:text-center">
    Welcome to HeroOne
  </h1>
  <!-- v-if -->
</section>
`;
